08-cicd/projects/task-2/infra/modules/ec2/sg.tf
data "aws_vpc" "default" { 
  default = true 
  }

resource "aws_security_group" "sg_frn-app" {
  vpc_id = data.aws_vpc.default.id

    ingress {
      description = "Open Docker + HTTP for frn-app"
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = [var.my_ip]
    }

    ingress {
        description = "SSH for troubleshooting"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = [var.my_ip] 
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = [var.my_ip]
    }

    tags = {
      Name = "sg_frn-app"
    }
}
